# tests-open-cv

./: CMakeLists.txt  calibrate.cpp  calibration.txt  createCharucoBoard.cpp  createMarker.cpp  detectMarkers.cpp  main.cpp
